se crea home hoteles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SanRafa</string>
+    <string name="titulohomehoteles">Hoteles en SanRafa</string>
+    <string name="descripcionhomehoteles">En nuestro pueblo encontrara alojamientos desde 35000 COP
+        hasta lujosas cabañas dotadas de todos los elementos para promover un descanso restauradordor. Visitanos</string>
+    <string name="botonhomehoteles">Ver Hoteles</string>
+
 </resources>
